# RAFFLE

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  Makefile  README.md  chem.in  ford.md  fpm.toml  heatmap.ipynb  isosurface.ipynb  kind_map  param.in  pyproject.toml  setup.py  test_evaluator.py
.github/workflows/: cmake.yml  coverage.yml  formatting.yml  fpm.yml  publish-to-test-pypi.yml  python.yml
app/: inputs.f90  main.f90  mod_read_structures.f90  mod_rw_vasprun.f90  mod_vasp_file_handler.f90
backup/: ConvergedResults.sh  CurrEn.sh  atom.f90  bondlength_gaussifier.sh  generator.f90  main.f90  mainBACKUP.f90  sub.f90  sub_withoversample.f90
cmake/: CodeCoverage.cmake
docs/: conf.py  index.rst  install.rst  requirements.txt
docs/source/: conf.py  faq.rst  index.rst  install.rst  modules.rst  raffle.distributions.rst  raffle.generator.rst  raffle.geom.rst
docs/source/tutorials/: C-MgO_tutorial.rst  agox_tutorial.rst  databases_tutorial.rst  diamond_tutorial.rst  generating_tutorial.rst  graphene_grain_boundary_tutorial.rst  graphite_tutorial.rst  host_tutorial.rst  index.rst  parameters_tutorial.rst  quick_guide.rst  visualisation.rst
docs/tutorials/: BaTiO3_tutorial.rst  diamond_tutorial.rst  graphite_tutorial.rst  index.rst  perovskites_tutorial.rst
edited_autogen_files/: f90wrap_mod_evolver.f90  f90wrap_mod_generator.f90  f90wrap_mod_rw_geom.f90  raffle.py
example/chgnet/: chgnet_tester.py
example/data/: MoS2_vasp.xyz  ScS2-Li.xyz  Si-Ge.xyz  Si-Ge_interfaces_gpaw.xyz  Si-Ge_interfaces_vasp.xyz  aluminium.xyz  carbon.xyz
example/data/C-MgO_hosts/: POSCAR_10x10_5.4_separation  POSCAR_10x10_6.0A_separation  POSCAR_1x1_5.4A_separation  POSCAR_1x5_orthorhombic_11.0A_separation  POSCAR_2x2_5.4A_separation  POSCAR_3x3_11.0A_separation  POSCAR_3x3_5.4A_separation  POSCAR_4x4_11.0A_separation  POSCAR_5x1_6.0A_separation  POSCAR_6x6_5.4A_separation  POSCAR_7x7_8.4A_separation  POSCAR_MgO_HEX
example/example_files/: POSCAR_host  POSCAR_host_BaTiO3  POSCAR_host_diamond  POSCAR_host_graphene  POSCAR_host_graphite  POSCAR_host_graphite_vacancy  POSCAR_host_perovskites  POSCAR_host_perovskites_undefected
example/example_files/DC_MgO_hosts/: POSCAR_2x5_orthorhombic_11.0A_separation  POSCAR_4x4_14.7A_separation  POSCAR_5x1_5.4A_separation  POSCAR_orthorhombic_11.1A_separation_Mg_seeded
example/example_files/database_perovskites/: database.xyz
example/executable/: param.in
example/python_pkg/: README.md  requirements.txt
example/python_pkg/Al_learn/: learn.py  learn_placement.py  pca.ipynb  pca_placement.ipynb  pca_placement_boa.ipynb  pca_placement_boa_ratios.ipynb  pca_placement_bucket.ipynb  pca_placement_order_ratios.ipynb  sort_structures.ipynb
example/python_pkg/BaTiO3/: run.py
example/python_pkg/C-MgO/: run.py
example/python_pkg/C-MgO_learn/: learn.py  pca.ipynb  sort_structures.ipynb
example/python_pkg/C_learn/: learn.py  plot_structures_vs_energies.ipynb
example/python_pkg/MoS2_learn/: S.xyz  learn.py  pca.ipynb  sort_structures.ipynb
example/python_pkg/ScS2-Li_learn/: Li.xyz  ScS2.vasp  learn.py  pca.ipynb  sort_structures.ipynb
example/python_pkg/ScS2_learn/: Sc.poscar  learn.py
example/python_pkg/Si-Ge_learn/: Ge_slab.vasp  SiGe_abrupt_interface.vasp  SiGe_abrupt_interface_rescaled.vasp  Si_slab.vasp  learn.py  pca.ipynb  sort_structures.ipynb
example/python_pkg/benchmarks/: cutoff_max.py  min_placement.py  placement_methods.py  plot_benchmarks.ipynb
example/python_pkg/diamond/: POSCAR_host  POSCAR_host_3x3  run.py
example/python_pkg/graphene_grain_boundary_learn/: POSCAR_host_gb  graphene-gb1.xyz  graphene-gb2.xyz  graphene-gb3.xyz
example/python_pkg/graphite/: POSCAR_host_missing_layer  run.py
example/python_pkg/perovskites/: run.py
example/python_pkg/visualisation/: POSCAR_AABBCC_stack  POSCAR_AA_stack  POSCAR_ABAB_stack  POSCAR_ABA_stack  POSCAR_ABC_stack  POSCAR_AB_stack  POSCAR_diamond  POSCAR_lonsdaleite  convergence.ipynb  converted_db.traj  descriptor.ipynb  fingerprint.ipynb  host.traj  probability_density.ipynb
example/wrapper/: run.py  run_BaTiO3.py  run_carbon.py  run_diamond.py  run_graphite.py  run_perovskites.py
src/: atom.f90  backupgenerator.f90  child.py  class_method.py  funcs.py  generator.f90  host.py  inputs.f90  main.f90  raffle.f90  structure_class.py  sub.f90  wrap.py
src/backup/: backupsub.f90
src/fortran/: raffle.f90
src/fortran/lib/: mod_atom_adder.f90  mod_buildmap.f90  (+27 more)
src/lib/: mod_atom_adder.f90  mod_buildmap.f90  mod_constants.f90  mod_contributions.f90  mod_distributions.f90  mod_edit_geom.f90  mod_elements.f90  mod_evolver.f90  mod_file_generator.f90  mod_generator.f90  mod_generator_sub.f90  mod_geom.f90  mod_isolated.f90  mod_misc.f90  mod_misc_linalg.f90  mod_misc_maths.f90  mod_ml.f90  mod_read_chemfile.f90  mod_read_structures.f90  mod_rw_geom.f90  mod_rw_vasprun.f90  mod_vasp_file_handler.f90
src/pywrap/: child.py  funcs.py  host.py  structure_class.py  wrap.py
src/raffle/: __init__.py  raffle.py
src/wrapper/: f90wrap_mod_distribs_container.f90  f90wrap_mod_evolver.f90  f90wrap_mod_generator.f90  f90wrap_mod_geom_rw.f90  f90wrap_mod_rw_geom.f90  f90wrap_raffle.f90  raffle.py
test/: CMakeLists.txt  test_atom_adder.f90  test_cache.f90  test_dist_calcs.f90  test_distribs_container.f90  test_edit_geom.f90  test_element_utils.f90  test_elements.f90  test_evaluator.f90  test_evaluator_BTO.f90  test_evaluator_C.f90  test_evolver.f90  test_extended_geom.f90  test_generator.f90  test_geom_extd.f90  test_geom_rw.f90  test_geom_utils.f90  test_misc.f90  test_misc_linalg.f90  test_misc_maths.f90  test_place_methods.f90  test_raffle.py  test_rw_geom.f90  test_tools_infile.f90  test_viability.f90
test/data/: POSCAR_Si
tools/: Check_Running.sh  ConvergedResults.sh  QProcess.sh  R2CurrEn.sh  SCurrEn.sh  bond_database_builder.sh  bond_evolution.sh  check_indentation.py  contour_3D.ipynb  contour_3D.py  database.ipynb  database.py  descriptors.ipynb  heatmap_2Dcut.ipynb  isosurface.ipynb  similarity.sh  version_number.py  visualise_evaluator.ipynb
(+1229 files in other folders)
